style(Appointments): Added tablet styling so that the timeline events are aligned correctly

--- a/src/sass/modules/appointments.scss
+++ b/src/sass/modules/appointments.scss
@@ -45,7 +45,11 @@
 
     @media #{$mobile} {
         margin-left: 18px;
-        width: 70%;
+        width: 90%;
+    }
+
+    @media #{$tablet} {
+        margin-left: 18px;
     }
 
 }
